Complete Phase 6 & 7: Finalize Videos, UI Polish (Flags, Modal, PDF), and SEO

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,12 @@ desktop.ini
 # Dependencies
 node_modules/
 
+
 # Logs
 *.log
+
+# Video Processing
+media/videos/raw/
+convert_videos.ps1
+*.tar.xz
+*.zip
