--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,3 +3,6 @@ deployment:
   tasks:
     - export DEPLOYPATH=/home/jt30e3li9al4/public_html/xn--dermocan-g1a.com/
     - /bin/cp -R * $DEPLOYPATH
+    - /bin/chmod -R 755 $DEPLOYPATH
+    - /bin/chmod 644 $DEPLOYPATH/*.html $DEPLOYPATH/*.css $DEPLOYPATH/*.js $DEPLOYPATH/*.json
+    - /bin/chmod 644 $DEPLOYPATH/.htaccess
