--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,7 +2,9 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/jt30e3li9al4/public_html/xn--dermocan-g1a.com/
+    # Copy all files
     - /bin/cp -R * $DEPLOYPATH
+    # Fix Directory Permissions (755)
     - /bin/chmod -R 755 $DEPLOYPATH
-    - /bin/chmod 644 $DEPLOYPATH/*.html $DEPLOYPATH/*.css $DEPLOYPATH/*.js $DEPLOYPATH/*.json
-    - /bin/chmod 644 $DEPLOYPATH/.htaccess
+    # Fix File Permissions (644) - vital for .htaccess
+    - /bin/find $DEPLOYPATH -type f -exec chmod 644 {} \;
